--- a/p1ch3/2_named_tensors.ipynb
+++ b/p1ch3/2_named_tensors.ipynb
@@ -9,7 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../c10/core/TensorImpl.h:860: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable.\n"
+      "/tmp/ipykernel_412524/1646494204.py:2: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at ../c10/core/TensorImpl.h:1788.)\n",
+      "  _ = torch.tensor([0.2126, 0.7152, 0.0722], names=['c'])\n"
      ]
     }
    ],
@@ -67,10 +68,85 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Size([2, 3, 5, 5]), torch.Size([2, 3, 5, 5]), torch.Size([3, 1, 1]))"
+       "torch.Size([3])"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([3, 1]),\n",
+       " torch.Size([1, 3]),\n",
+       " torch.Size([3, 1]),\n",
+       " torch.Size([1, 3]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights.unsqueeze(1).shape, weights.unsqueeze(0).shape, weights.unsqueeze(-1).shape, weights.unsqueeze(-2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.2126],\n",
+       "         [0.7152],\n",
+       "         [0.0722]]),\n",
+       " tensor([[0.2126, 0.7152, 0.0722]]),\n",
+       " tensor([[0.2126],\n",
+       "         [0.7152],\n",
+       "         [0.0722]]),\n",
+       " tensor([[0.2126, 0.7152, 0.0722]]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Unsqueeze(1): add a dimension at position 1\n",
+    "# Unsqueeze(0): add a dimension at position 0\n",
+    "# Unsqueeze(-1): add a dimension at the last position\n",
+    "# Unsqueeze(-2): add a dimension at the second-to-last position\n",
+    "\n",
+    "weights.unsqueeze(1), weights.unsqueeze(0), weights.unsqueeze(-1), weights.unsqueeze(-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([2, 3, 5, 5]), torch.Size([2, 3, 5, 5]), torch.Size([3, 1, 1]))"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +162,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[[0.2126]],\n",
+       " \n",
+       "          [[0.7152]],\n",
+       " \n",
+       "          [[0.0722]]]]),\n",
+       " torch.Size([1, 3, 1, 1]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unsqueezed_weights.unsqueeze(0), unsqueezed_weights.unsqueeze(0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([2, 3, 5, 5]),\n",
+       " torch.Size([3, 1, 1]),\n",
+       " torch.Size([2, 3, 5, 5]),\n",
+       " torch.Size([2, 5, 5]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_t.shape, unsqueezed_weights.shape, batch_weights.shape, batch_gray_weighted.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -94,10 +218,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 5, 5])"
+       "(torch.Size([5, 5]), torch.Size([2, 5, 5]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,12 +229,12 @@
    "source": [
     "img_gray_weighted_fancy = torch.einsum('...chw,c->...hw', img_t, weights)\n",
     "batch_gray_weighted_fancy = torch.einsum('...chw,c->...hw', batch_t, weights)\n",
-    "batch_gray_weighted_fancy.shape"
+    "img_gray_weighted_fancy.shape, batch_gray_weighted_fancy.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +243,7 @@
        "tensor([0.2126, 0.7152, 0.0722], names=('channels',))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -154,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -165,7 +289,7 @@
        "(torch.Size([3, 1, 1]), ('channels', 'rows', 'columns'))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -188,7 +312,7 @@
        "(torch.Size([5, 5]), ('rows', 'columns'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -240,20 +364,6 @@
     "gray_plain = gray_named.rename(None)\n",
     "gray_plain.shape, gray_plain.names"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
