--- a/p1ch4/4_time_series_bikes.ipynb
+++ b/p1ch4/4_time_series_bikes.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
+    "# Set print options for PyTorch\n",
+    "# edgeitems: number of array items in summary at beginning and end of each dimension\n",
+    "# threshold: total number of array items printed\n",
+    "# linewidth: number of characters per line for printing\n",
     "torch.set_printoptions(edgeitems=2, threshold=50, linewidth=75)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +30,7 @@
        "        [1.7379e+04, 3.1000e+01,  ..., 3.7000e+01, 4.9000e+01]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +59,7 @@
        "(torch.Size([17520, 17]), (17, 1))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "17520 / 24 / 365"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +99,7 @@
        "(torch.Size([730, 24, 17]), (408, 17, 1))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -96,42 +120,114 @@
        "(torch.Size([730, 17, 24]), (408, 1, 17))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# We transpose to have N x C x L = 730 x 17 x 24\n",
+    "# where N is the number of days, C the number of channels, and L the length of each sequence of measurements\n",
     "daily_bikes = daily_bikes.transpose(1, 2)\n",
     "daily_bikes.shape, daily_bikes.stride()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3, 2, 2,\n",
-       "        2, 2])"
+       "torch.Size([1, 17, 24])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_bikes[:1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([24, 17])"
+      ]
+     },
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "first_day = bikes[:24].long()\n",
-    "weather_onehot = torch.zeros(first_day.shape[0], 4)\n",
-    "first_day[:,9]"
+    "first_day.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_onehot = torch.zeros(first_day.shape[0], 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [1],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [0],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [2],\n",
+       "        [2],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [1],\n",
+       "        [1]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_day[:,9].unsqueeze(1) - 1 # so it's 0 to 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +240,7 @@
        "        [0., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,29 +254,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([24, 4]), torch.Size([24, 9]), torch.Size([24, 7]))"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_onehot.shape, bikes[:24, :9].shape, first_day[:,10:].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([[ 1.0000,  1.0000,  1.0000,  0.0000,  1.0000,  0.0000,  0.0000,\n",
-       "          6.0000,  0.0000,  1.0000,  0.2400,  0.2879,  0.8100,  0.0000,\n",
-       "          3.0000, 13.0000, 16.0000,  1.0000,  0.0000,  0.0000,  0.0000]])"
+       "          6.0000,  0.0000,  0.2400,  0.2879,  0.8100,  0.0000,  3.0000,\n",
+       "         13.0000, 16.0000,  1.0000,  0.0000,  0.0000,  0.0000]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.cat((bikes[:24], weather_onehot), 1)[:1]"
+    "torch.cat((bikes[:24, :9], bikes[:24, 10:], weather_onehot), 1)[:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +305,7 @@
        "torch.Size([730, 4, 24])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,16 +318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([730, 4, 24])"
+       "(torch.Size([730, 4, 24]), torch.Size([730, 17, 24]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,21 +335,41 @@
    "source": [
     "daily_weather_onehot.scatter_(\n",
     "    1, daily_bikes[:,9,:].long().unsqueeze(1) - 1, 1.0)\n",
-    "daily_weather_onehot.shape"
+    "daily_weather_onehot.shape, daily_bikes.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "daily_bikes = torch.cat((daily_bikes, daily_weather_onehot), dim=1)"
+    "daily_bikes = torch.cat((daily_bikes[:,:9,:], daily_bikes[:,10:,:], daily_weather_onehot), dim=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([730, 20, 24])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_bikes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
