--- a/p1ch4/3_tabular_wine.ipynb
+++ b/p1ch4/3_tabular_wine.ipynb
@@ -109,7 +109,8 @@
        "         [ 6.30,  0.30,  ...,  0.49,  9.50],\n",
        "         ...,\n",
        "         [ 5.50,  0.29,  ...,  0.38, 12.80],\n",
-       "         [ 6.00,  0.21,  ...,  0.32, 11.80]]), torch.Size([4898, 11]))"
+       "         [ 6.00,  0.21,  ...,  0.32, 11.80]]),\n",
+       " torch.Size([4898, 11]))"
       ]
      },
      "execution_count": 5,
@@ -166,7 +167,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4898])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4898, 10])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_onehot = torch.zeros(target.shape[0], 10)\n",
+    "target_onehot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[6],\n",
+       "         [6],\n",
+       "         ...,\n",
+       "         [7],\n",
+       "         [6]]),\n",
+       " torch.Size([4898, 1]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target.unsqueeze(1), target.unsqueeze(1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -179,20 +246,24 @@
        "        [0., 0.,  ..., 0., 0.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "target_onehot = torch.zeros(target.shape[0], 10)\n",
+    "# target.unsqueeze(1) creates a new dimension of size one, while target_onehot has 10 columns.\n",
+    "# The scatter_ method fills the tensor with values from a source tensor along the indices provided as arguments.\n",
+    "# The 1 in the method name indicates that the operation happens along the first dimension of the tensor.\n",
+    "# The method returns the modified tensor (note the trailing underscore in the method name).\n",
+    "# This is a common convention in PyTorch, indicating that the method operates in place.\n",
     "\n",
     "target_onehot.scatter_(1, target.unsqueeze(1), 1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +276,7 @@
        "        [6]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,64 +288,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([6.85e+00, 2.78e-01, 3.34e-01, 6.39e+00, 4.58e-02, 3.53e+01,\n",
-       "        1.38e+02, 9.94e-01, 3.19e+00, 4.90e-01, 1.05e+01])"
+       "(tensor([6.85e+00, 2.78e-01, 3.34e-01, 6.39e+00, 4.58e-02, 3.53e+01,\n",
+       "         1.38e+02, 9.94e-01, 3.19e+00, 4.90e-01, 1.05e+01]),\n",
+       " torch.Size([11]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_mean = torch.mean(data, dim=0)\n",
-    "data_mean"
+    "data_mean, data_mean.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([7.12e-01, 1.02e-02, 1.46e-02, 2.57e+01, 4.77e-04, 2.89e+02,\n",
-       "        1.81e+03, 8.95e-06, 2.28e-02, 1.30e-02, 1.51e+00])"
+       "(tensor([7.12e-01, 1.02e-02, 1.46e-02, 2.57e+01, 4.77e-04, 2.89e+02,\n",
+       "         1.81e+03, 8.95e-06, 2.28e-02, 1.30e-02, 1.51e+00]),\n",
+       " torch.Size([11]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_var = torch.var(data, dim=0)\n",
-    "data_var"
+    "data_var, data_var.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([[ 1.72e-01, -8.18e-02,  ..., -3.49e-01, -1.39e+00],\n",
-       "        [-6.57e-01,  2.16e-01,  ...,  1.35e-03, -8.24e-01],\n",
+       "        [-6.57e-01,  2.16e-01,  ...,  1.34e-03, -8.24e-01],\n",
        "        ...,\n",
        "        [-1.61e+00,  1.17e-01,  ..., -9.63e-01,  1.86e+00],\n",
        "        [-1.01e+00, -6.77e-01,  ..., -1.49e+00,  1.04e+00]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +368,7 @@
        "(torch.Size([4898]), torch.bool, tensor(20))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +389,7 @@
        "torch.Size([20, 11])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +401,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(20), tensor(3818), tensor(1060))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(target <= 3).sum(), ((target > 3) & (target < 7)).sum(), (target >= 7).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
