--- a/p1ch4/5_text_jane_austen.ipynb
+++ b/p1ch4/5_text_jane_austen.ipynb
@@ -29,7 +29,8 @@
     {
      "data": {
       "text/plain": [
-       "'“Impossible, Mr. Bennet, impossible, when I am not acquainted with him'"
+       "('“Impossible, Mr. Bennet, impossible, when I am not acquainted with him',\n",
+       " 13428)"
       ]
      },
      "execution_count": 3,
@@ -40,7 +41,7 @@
    "source": [
     "lines = text.split('\\n')\n",
     "line = lines[200]\n",
-    "line"
+    "line, len(lines)"
    ]
   },
   {
@@ -66,18 +67,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32, 10, 9)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord(' '), ord('\\n'), ord('\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i, letter in enumerate(line.lower().strip()):\n",
-    "    letter_index = ord(letter) if ord(letter) < 128 else 0  # <1>\n",
+    "    letter_index = ord(letter) if ord(letter) < 128 else 0  # because utf-8 uses 8 bits to encode ASCII characters and 16 or 32 bits for others\n",
     "    letter_t[i][letter_index] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +118,7 @@
        "  'him'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7261, 3394)"
+       "(7261, 3394, 4178, 4428)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,12 +154,42 @@
     "word_list = sorted(set(clean_words(text)))\n",
     "word2index_dict = {word: i for (i, word) in enumerate(word_list)}\n",
     "\n",
-    "len(word2index_dict), word2index_dict['impossible']"
+    "len(word2index_dict), word2index_dict['impossible'], word2index_dict['might'], word2index_dict['nonsensical']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['impossible',\n",
+       " 'mr',\n",
+       " 'bennet',\n",
+       " 'impossible',\n",
+       " 'when',\n",
+       " 'i',\n",
+       " 'am',\n",
+       " 'not',\n",
+       " 'acquainted',\n",
+       " 'with',\n",
+       " 'him']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words_in_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -295,27 +346,6 @@
    "source": [
     "[(c, ord(c)) for c in sorted(set(text))]\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "108"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ord('l'\n",
-    "   )"
-   ]
   }
  ],
  "metadata": {
@@ -334,15 +364,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.10.12"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
