Chapter 5: optimizers and autograd. Ready.

--- a/p1ch5/2_autograd.ipynb
+++ b/p1ch5/2_autograd.ipynb
@@ -19,9 +19,9 @@
    "outputs": [],
    "source": [
     "t_c = torch.tensor([0.5, 14.0, 15.0, 28.0, 11.0, 8.0,\n",
-    "                    3.0, -4.0, 6.0, 13.0, 21.0])\n",
+    "                    3.0, -4.0, 6.0, 13.0, 21.0], device='cuda')\n",
     "t_u = torch.tensor([35.7, 55.9, 58.2, 81.9, 56.3, 48.9,\n",
-    "                    33.9, 21.8, 48.4, 60.4, 68.4])\n",
+    "                    33.9, 21.8, 48.4, 60.4, 68.4], device='cuda')\n",
     "t_un = 0.1 * t_u"
    ]
   },
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = torch.tensor([1.0, 0.0], requires_grad=True)"
+    "params = torch.tensor([1.0, 0.0], requires_grad=True, device='cuda')"
    ]
   },
   {
@@ -83,7 +83,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([4517.2969,   82.6000])"
+       "(device(type='cuda', index=0),\n",
+       " device(type='cuda', index=0),\n",
+       " device(type='cuda', index=0))"
       ]
      },
      "execution_count": 7,
@@ -92,15 +94,57 @@
     }
    ],
    "source": [
-    "loss = loss_fn(model(t_u, *params), t_c)\n",
-    "loss.backward()\n",
+    "params.device, t_u.device, t_c.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([4517.2969,   82.6000], device='cuda:0')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_p = model(t_u, *params)\n",
+    "loss = loss_fn(t_p, t_c)\n",
+    "loss.backward() # compute the gradient of the loss with respect to all the parameters\n",
+    "# that have requires_grad=True\n",
     "\n",
     "params.grad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RuntimeError: Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    loss.backward()\n",
+    "except RuntimeError:\n",
+    "    print(\"RuntimeError: Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -144,34 +188,43 @@
       "Epoch 500, Loss 7.860116\n",
       "Epoch 1000, Loss 3.828538\n",
       "Epoch 1500, Loss 3.092191\n",
-      "Epoch 2000, Loss 2.957697\n",
+      "Epoch 2000, Loss 2.957698\n",
       "Epoch 2500, Loss 2.933134\n",
       "Epoch 3000, Loss 2.928648\n",
-      "Epoch 3500, Loss 2.927830\n",
+      "Epoch 3500, Loss 2.927831\n",
       "Epoch 4000, Loss 2.927679\n",
       "Epoch 4500, Loss 2.927652\n",
-      "Epoch 5000, Loss 2.927647\n"
+      "Epoch 5000, Loss 2.927647\n",
+      "Epoch 5500, Loss 2.927647\n",
+      "Epoch 6000, Loss 2.927647\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([  5.3671, -17.3012], requires_grad=True)"
+       "tensor([  5.3676, -17.3042], requires_grad=True)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "training_loop(\n",
-    "    n_epochs = 5000, \n",
+    "    n_epochs = 6000, \n",
     "    learning_rate = 1e-2, \n",
     "    params = torch.tensor([1.0, 0.0], requires_grad=True), # <1> \n",
     "    t_u = t_un, # <2> \n",
     "    t_c = t_c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -190,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
