--- a/p1ch5/3_optimizers.ipynb
+++ b/p1ch5/3_optimizers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "t_c = torch.tensor([0.5, 14.0, 15.0, 28.0, 11.0,\n",
-    "                    8.0, 3.0, -4.0, 6.0, 13.0, 21.0])\n",
+    "                    8.0, 3.0, -4.0, 6.0, 13.0, 21.0], device=\"cuda\")\n",
     "t_u = torch.tensor([35.7, 55.9, 58.2, 81.9, 56.3, 48.9,\n",
-    "                    33.9, 21.8, 48.4, 60.4, 68.4])\n",
+    "                    33.9, 21.8, 48.4, 60.4, 68.4], device=\"cuda\")\n",
     "t_un = 0.1 * t_u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,9 @@
        " 'AdamW',\n",
        " 'Adamax',\n",
        " 'LBFGS',\n",
+       " 'NAdam',\n",
        " 'Optimizer',\n",
+       " 'RAdam',\n",
        " 'RMSprop',\n",
        " 'Rprop',\n",
        " 'SGD',\n",
@@ -75,10 +77,13 @@
        " '__package__',\n",
        " '__path__',\n",
        " '__spec__',\n",
-       " 'lr_scheduler']"
+       " '_functional',\n",
+       " '_multi_tensor',\n",
+       " 'lr_scheduler',\n",
+       " 'swa_utils']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +116,7 @@
        "tensor([ 9.5483e-01, -8.2600e-04], requires_grad=True)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +142,7 @@
        "tensor([1.7761, 0.1064], requires_grad=True)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,17 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 500, Loss 7.860118\n",
+      "Epoch 500, Loss 7.860116\n",
       "Epoch 1000, Loss 3.828538\n",
       "Epoch 1500, Loss 3.092191\n",
-      "Epoch 2000, Loss 2.957697\n",
+      "Epoch 2000, Loss 2.957698\n",
       "Epoch 2500, Loss 2.933134\n",
       "Epoch 3000, Loss 2.928648\n",
       "Epoch 3500, Loss 2.927830\n",
@@ -202,16 +207,16 @@
     {
      "data": {
       "text/plain": [
-       "tensor([  5.3671, -17.3012], requires_grad=True)"
+       "tensor([  5.3671, -17.3012], device='cuda:0', requires_grad=True)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "params = torch.tensor([1.0, 0.0], requires_grad=True)\n",
+    "params = torch.tensor([1.0, 0.0], requires_grad=True, device=\"cuda\")\n",
     "learning_rate = 1e-2\n",
     "optimizer = optim.SGD([params], lr=learning_rate) # <1>\n",
     "\n",
@@ -225,32 +230,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 500, Loss 7.612903\n",
+      "Epoch 500, Loss 7.612904\n",
       "Epoch 1000, Loss 3.086700\n",
-      "Epoch 1500, Loss 2.928578\n",
-      "Epoch 2000, Loss 2.927646\n"
+      "Epoch 1500, Loss 2.928580\n",
+      "Epoch 2000, Loss 2.927644\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([  0.5367, -17.3021], requires_grad=True)"
+       "tensor([  0.5367, -17.3021], device='cuda:0', requires_grad=True)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "params = torch.tensor([1.0, 0.0], requires_grad=True)\n",
+    "params = torch.tensor([1.0, 0.0], requires_grad=True, device=\"cuda\")\n",
     "learning_rate = 1e-1\n",
     "optimizer = optim.Adam([params], lr=learning_rate) # <1>\n",
     "\n",
@@ -264,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([9, 6, 5, 8, 4, 7, 0, 1, 3]), tensor([ 2, 10]))"
+       "(tensor([ 7, 10,  8,  4,  2,  0,  5,  9,  1]), tensor([6, 3]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,37 +339,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 66.5811, Validation loss 142.3890\n",
-      "Epoch 2, Training loss 38.8626, Validation loss 64.0434\n",
-      "Epoch 3, Training loss 33.3475, Validation loss 39.4590\n",
-      "Epoch 500, Training loss 7.1454, Validation loss 9.1252\n",
-      "Epoch 1000, Training loss 3.5940, Validation loss 5.3110\n",
-      "Epoch 1500, Training loss 3.0942, Validation loss 4.1611\n",
-      "Epoch 2000, Training loss 3.0238, Validation loss 3.7693\n",
-      "Epoch 2500, Training loss 3.0139, Validation loss 3.6279\n",
-      "Epoch 3000, Training loss 3.0125, Validation loss 3.5756\n"
+      "Epoch 1, Training loss 54.6022, Validation loss 196.2941\n",
+      "Epoch 2, Training loss 28.9488, Validation loss 113.8239\n",
+      "Epoch 3, Training loss 24.0091, Validation loss 86.6818\n",
+      "Epoch 500, Training loss 8.5065, Validation loss 23.6403\n",
+      "Epoch 1000, Training loss 4.3771, Validation loss 10.2660\n",
+      "Epoch 1500, Training loss 3.2013, Validation loss 6.3667\n",
+      "Epoch 2000, Training loss 2.8664, Validation loss 5.2080\n",
+      "Epoch 2500, Training loss 2.7710, Validation loss 4.8522\n",
+      "Epoch 3000, Training loss 2.7439, Validation loss 4.7371\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([  5.1964, -16.7512], requires_grad=True)"
+       "tensor([  5.2457, -17.0469], device='cuda:0', requires_grad=True)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "params = torch.tensor([1.0, 0.0], requires_grad=True)\n",
+    "params = torch.tensor([1.0, 0.0], requires_grad=True, device=\"cuda\")\n",
     "learning_rate = 1e-2\n",
     "optimizer = optim.SGD([params], lr=learning_rate)\n",
     "\n",
@@ -430,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
