--- a/p1ch5/3_optimizers.ipynb
+++ b/p1ch5/3_optimizers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        " 'swa_utils']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "tensor([ 9.5483e-01, -8.2600e-04], requires_grad=True)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "tensor([1.7761, 0.1064], requires_grad=True)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "tensor([  5.3671, -17.3012], device='cuda:0', requires_grad=True)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "tensor([  0.5367, -17.3021], device='cuda:0', requires_grad=True)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([ 7, 10,  8,  4,  2,  0,  5,  9,  1]), tensor([6, 3]))"
+       "(tensor([ 1,  4,  3,  7,  8, 10,  2,  9,  6]), tensor([0, 5]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,39 +331,39 @@
     "        optimizer.step()\n",
     "\n",
     "        if epoch <= 3 or epoch % 500 == 0:\n",
-    "            print(f\"Epoch {epoch}, Training loss {train_loss.item():.4f},\"\n",
-    "                  f\" Validation loss {val_loss.item():.4f}\")\n",
+    "            print(f\"Epoch {epoch},\\tTraining loss {train_loss.item():.4f},\"\n",
+    "                  f\"\\tValidation loss {val_loss.item():.4f}\")\n",
     "            \n",
     "    return params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Training loss 54.6022, Validation loss 196.2941\n",
-      "Epoch 2, Training loss 28.9488, Validation loss 113.8239\n",
-      "Epoch 3, Training loss 24.0091, Validation loss 86.6818\n",
-      "Epoch 500, Training loss 8.5065, Validation loss 23.6403\n",
-      "Epoch 1000, Training loss 4.3771, Validation loss 10.2660\n",
-      "Epoch 1500, Training loss 3.2013, Validation loss 6.3667\n",
-      "Epoch 2000, Training loss 2.8664, Validation loss 5.2080\n",
-      "Epoch 2500, Training loss 2.7710, Validation loss 4.8522\n",
-      "Epoch 3000, Training loss 2.7439, Validation loss 4.7371\n"
+      "Epoch 1,\tTraining loss 96.1012,\tValidation loss 9.5485\n",
+      "Epoch 2,\tTraining loss 35.6511,\tValidation loss 22.7698\n",
+      "Epoch 3,\tTraining loss 28.4114,\tValidation loss 35.2234\n",
+      "Epoch 500,\tTraining loss 7.5929,\tValidation loss 13.7212\n",
+      "Epoch 1000,\tTraining loss 3.9681,\tValidation loss 6.1071\n",
+      "Epoch 1500,\tTraining loss 3.3146,\tValidation loss 3.8031\n",
+      "Epoch 2000,\tTraining loss 3.1968,\tValidation loss 2.9923\n",
+      "Epoch 2500,\tTraining loss 3.1756,\tValidation loss 2.6782\n",
+      "Epoch 3000,\tTraining loss 3.1717,\tValidation loss 2.5503\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([  5.2457, -17.0469], device='cuda:0', requires_grad=True)"
+       "tensor([  5.2345, -16.3226], device='cuda:0', requires_grad=True)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
