--- a/p1ch7/2_birds_airplanes.ipynb
+++ b/p1ch7/2_birds_airplanes.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fe0f82a25f0>"
+       "<torch._C.Generator at 0x759834a3ad50>"
       ]
      },
      "execution_count": 1,
@@ -2019,7 +2019,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
